# GeneticEngine

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  1.txt  AGENTS.md  CompilingGeneticEngine.md  Readme.md  benchmark.sh  example.py  mkdocs.yml  mypy.ini  pymax.py  pyproject.toml  regression_evolution.csv  requirements-dev.txt  requirements.txt  run-examples.sh  run.py  run_examples.sh  santafe.py  setup.cfg  setup.py  setup_dev.sh  tach.toml
.github/workflows/: codspeed.yml  python-app.yml  python-benchmarking.yml  python-publish.yml  python-tests.yml  ruff.yml  run-examples.yml  run_examples.yml
datasets/Banknote/: Train.csv
datasets/GameOfLife/: Test.csv  Test_X.npy  Test_y.npy  Train_X.npy  Train_Y.npy
datasets/Vladislavleva4/: Test.txt  Train.txt
docs/: api.rst  conf.py  gen_ref_pages.py  grammars.md  index.rst  representations.md  requirements.txt  tutorial.md
docs/algorithms/: genetic_programming.md  index.md
docs/genetic_operators/: selections.md
docs/metahandlers/: api.md  define.md  index.md
docs/source/: algorithms.md  conf.py  genetic_operators.md  grammars.md  index.md  metahandlers.md  optimizations.md  parallel.md  problems.md  representations.md  sklearn.md  stopping.md  synthetic_problems.md  tutorial.md
examples/: altered_qualia.py  binary.py  classification.py  classification_lexicase.py  classification_probabilisticGE.py  classification_unknown_length_objectives.py  coevolution.py  coevolution_dna.py  domino.py  dominoRecursive.py  dynamic_grammar_example.py  example.py  exponentiation.py  extra_columns_example.py  game_of_life.py  game_of_life_vectorial.py  genomics_classification.py  global_vars.py  logging_example.py  multi_target_lexicase.py  multipopulation.py  number_maker.py  order_number.py  pcfg_example.py  polygon.py  pymax.py  recurrence.py  regex_improvement.py  regression.py  regression_diabetes.py  regression_example.py  regression_lexicase.py  santafe.py  shapley_values.py  simple_choice_of_choice.py  sklearn-type-examples.py  sklearn_type_examples.py  stack.py  string_match.py  synthetic_grammar_example.py  (+2 more)
examples/archived/: regex_improvement.py
examples/benchmarks/: benchmark.py  benchmark_suite.py  classification.py  classification_downsampling.py  classification_lexicase.py  datasets.py  domino.py  game_of_life_vectorial.py  lambda_calculus.py  mario_level.py  median.py  psb.py  pymax.py  regression.py  regression_lexicase.py  santa_fe.py  santafe.py  string_match.py  vectorialgp.py
examples/data/: manipulate_data.py
examples/geml/: classifier_example.py  regressor_example.py
examples/genetic_example/: dataset_principal.csv  dataset_secundario.csv  genetic_example.py
examples/progsys/: Compare String Lengths-Embed.txt  Median-Embed.py  Median.bnf  Median.py  Number IO-Embed.py  Number IO.bnf  Number IO.py  Number_IO.py  Smallest-Embed.py  Smallest.bnf  Smallest.py  Sum_of_Squares-Embed.py  Sum_of_Squares.py  Vector Average-Embed.txt  Vector Average.bnf  Vector_Average.py  fitness.py  utils.py
examples/regex_fitness/: RegexEval.py
examples/stl/: genetic_example.py  stl.py
geml/: classifiers.py  common.py  metrics.py  regressors.py  simplegp.py  simplifier.py  sympy_compatible.py
geml/grammars/: basic_math.py  letter.py  literals.py  regex.py  ruleset_classification.py  sgp.py  symbolic_regression.py
geneticengine/: evaluators.py  exceptions.py  generic_utils.py  prelude.py
geneticengine/algorithms/: Readme.md  api.py  enumerative.py  heuristics.py  hill_climbing.py  one_plus_one.py  random_mutations.py  random_search.py
geneticengine/analysis/: grammar_analysis.py  production_analysis.py
geneticengine/core/: decorators.py  evaluators.py  fitness_helpers.py  grammar.py  parallel_evaluation.py  problems.py  tree.py  utils.py
geneticengine/evaluation/: __init__.py  api.py  budget.py  exceptions.py  parallel.py  parallel_evaluation.py  recorder.py  sequential.py  tracker.py
geneticengine/grammar/: __init__.py  decorators.py  grammar.py  synthetic_grammar.py  utils.py
geneticengine/grammars/: Readme.md  basic_math.py  conditions.py  control_flow.py  dynamic_grammar.py  letter.py  literals.py  logical_ops.py  math.py  regex.py  sgp.py  synthetic_grammar.py
geneticengine/metahandlers/: Readme.md  base.py  floats.py  ints.py  lists.py  strings.py  vars.py
geneticengine/metrics/: __init__.py  metrics.py
geneticengine/off_the_shelf/: Readme.md  classifiers.py  regressors.py  sympy_compatible.py
geneticengine/prelude/: __init__.py
geneticengine/problems/: __init__.py  helpers.py
geneticengine/random/: sources.py
geneticengine/representations/: api.py  common.py
geneticengine/solutions/: __init__.py  individual.py  tree.py
geneticengine/visualization/: fitness_comparison.py  per_gen_comparisons.py  plot_comparison.py  utils.py
old_docs/: builtin_grammars.md  index.md  problems.md  sklearn.md
src/: example.py  number_maker.py  pymax.py  regression_example.py  santafe.py  scratch.py  setup.py  vectorialgp_example.py
src/geneticengine/: __init__.py  __main__.py
tests/: csv_test.py  depthing_test.py  fitness_helpers_test.py  grammar_test.py  immutability_test.py  ind_gen_test.py  initializer_performance_test.py  initializer_test.py  is_terminal_test.py  metahandlers_test.py  non_abstract_error_test.py  nondataclass_test.py  parallel_test.py  pigrow_test.py  precache_test.py  probabilistic_test.py  ramped_hah_test.py  rampedhah_test.py  relabel_test.py  sklearn_test.py  smt_test.py  stack_test.py  stopping_test.py  test_grammar.py  test_ltr.py  test_metahandlers.py  test_non_abstract_error.py  test_nondataclass.py  test_pigrow.py  test_smt.py  test_type_safety.py  tree_inits_test.py  treebased_representation_test.py  type_safety_test.py
tests/core/: fitness_helpers_test.py  grammar_test.py  ind_gen_test.py  is_terminal_test.py  metahandlers_test.py  non_abstract_error_test.py  reproducibility_test.py  usable_grammar_test.py  varrange_with_probabilities_test.py
tests/depedenttypes/: smt_test.py
tests/enumerative/: enumerative_test.py
(+256 files in other folders)
