[metadata]
name = GeneticEngine
version = 0.0.5
author = Alcides Fonseca
author_email = me@alcidesfonseca.com
description = Genetic Programming with an hybrid of Grammar-based and Strongly-type restrictions on the tree.
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/alcides/GeneticEngine/
project_urls =
    Bug Tracker = http://github.com/alcides/GeneticEngine/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
where = .
