[metadata]
name = GeneticEngine
version = 0.0.11
description = Genetic Programming with an hybrid of Grammar-based and Strongly-type restrictions on the tree.
long_description = file: Readme.md
long_description_content_type = text/markdown
url = http://github.com/alcides/GeneticEngine/
author = Alcides Fonseca
author_email = me@alcidesfonseca.com
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = http://github.com/alcides/GeneticEngine/issues

[options]
packages = find:
install_requires =
    lark
    z3-solver
python_requires = >=3.9

[options.packages.find]
where = .
